# FileNavigator

./: .replit  Cargo.toml  build.rs  windows-resources.rc
.github/workflows/: build.yml
attached_assets/: Pasted--Compiling-proc-macro2-v1-0-95-Compiling-unicode-ident-v1-0-18-Compiling-libc-v0-2-172--1747168232869.txt  Pasted--use-std-fs-self-File-io-self-Read-Write-BufReader-BufWriter-path-Path-PathBuf--1747155887376.txt  Pasted-Compiling-proc-macro2-v1-0-95-Compiling-unicode-ident-v1-0-18-Compiling-libc-v0-2-172-Co-1747168668124.txt
src/: encryption.rs  gui.rs  i18n.rs  main.rs  main.rs.portable
