[package]
name = "transcendental_crypto"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Transcendental Encryption Tool"

[dependencies]
eframe = "0.22.0"  # egui cross-platform GUI framework
rfd = "0.11.0"     # File dialog support
sha2 = "0.10.7"     # For hashing
rug = { version = "1.20.0", default-features = false }  # For transcendental calculations
dirs = "5.0.1"      # For finding user directories
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embed-resource = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

# This ensures a completely standalone binary
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Static linking ensures portability
[features]
default = []
static = ["eframe/default_fonts"]